[gd_scene load_steps=2 format=3 uid="uid://isometric_loc_001"]

[ext_resource type="Script" path="res://scripts/isometric_location_generator.gd" id="1"]

[node name="IsometricLocation" type="Node2D"]
script = ExtResource("1")

[node name="TerrainLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 600.0
offset_bottom = 150.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Isometric Wang Tile Generator
WASD - Move Camera
Q/E - Zoom In/Out
Loading..."

[node name="MinimapPanel" type="Panel" parent="UI"]
offset_left = 1600.0
offset_top = 850.0
offset_right = 1900.0
offset_bottom = 1070.0

[node name="MinimapViewport" type="SubViewportContainer" parent="UI/MinimapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="UI/MinimapPanel/MinimapViewport"]
handle_input_independently = false
size = Vector2i(300, 220)
render_target_update_mode = 4

[node name="MinimapCamera" type="Camera2D" parent="UI/MinimapPanel/MinimapViewport/SubViewport"]
zoom = Vector2(0.2, 0.2)
